--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,115 @@
 body {
-    background-color: #0c0c0c;
+    background-color: #1b1b1b;
+    margin:0;
+    color: white;
+    font-family: 'Noto Sans', sans-serif
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+h1 {
+    font-family: Carattere,cursive;
+    color: #ffe48a;
+    font-size: 80px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-shadow: 0px 0px 4px #cc8b42, 0px 0px 8px black, 0px 0px 8px black;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 20%;
+    align-items: center;
+}
+
+#header-img{
+    width: 100%;
+    height: 250px;
+    background: url(https://images.unsplash.com/photo-1481833761820-0509d3217039?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80) no-repeat center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+
+#sawtooth {
+    margin-top: auto;
+    background-image:
+    linear-gradient(
+        135deg,
+        transparent 50%, #303030 50%
+    ),
+    linear-gradient(
+        -135deg,
+        transparent 50%, #303030 50%
+    ),
+    linear-gradient(
+        0deg,
+        rgba(0,0,0,1) 30%, rgba(0,0,0,0) 100%
+    );
+    background-position: top center, top center;
+    background-size: 2rem 2rem, 2rem 2rem;
+    background-repeat: repeat-x;
+    width: 100%;
+    height: 31px;
+}
+
+nav {
+    width: 100%;
+    height: 34px;
+    background-color: #303030;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.514);
+}
+
+.nav-btn {
+    align-self: flex-end;
+    height: 50px;
+    width: 75px;
+    background-color: transparent;
+    border: 0px;
+    cursor: pointer;
+    color: white;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+#content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#home-container {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 500px;
+    height: 500px;
+    background-color: #303030;
 }
 
 hr.dotted {
     border-top: 3px dotted #bbb;
   }
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background-color: #303030;
+    justify-content: center;
+    align-items: center;
+}
