--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,24 @@
 body {
-    background-color: #1b1b1b;
+    background: url(https://images.unsplash.com/photo-1501339847302-ac426a4a7cbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80) no-repeat center center;
+    background-size: cover;
     margin:0;
-    color: white;
+    color: rgb(221, 218, 203);
     font-family: 'Noto Sans', sans-serif
+    
 }
 
 #content {
+    border-left: 1px solid #dca564;
+    border-right: 1px solid #dca564;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50vw;
+    min-width: 600px;
+    min-height: 100vh;
     height: 100%;
     align-items: center;
+    margin: auto;
+    background-color: #03141180;
 }
 
 h1 {
@@ -28,13 +36,12 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 20%;
     align-items: center;
 }
 
 #header-img{
     width: 100%;
-    height: 250px;
+    height: 220px;
     background: url(https://images.unsplash.com/photo-1481833761820-0509d3217039?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80) no-repeat center center;
     background-size: cover;
     display: flex;
@@ -46,15 +53,15 @@ header {
     background-image:
     linear-gradient(
         135deg,
-        transparent 50%, #303030 50%
+        transparent 50%, #121a1800 50%
     ),
     linear-gradient(
         -135deg,
-        transparent 50%, #303030 50%
+        transparent 50%, #121a1800 50%
     ),
     linear-gradient(
         0deg,
-        rgba(0,0,0,1) 30%, rgba(0,0,0,0) 100%
+        rgba(0,0,0,0) 30%, rgba(0,0,0,0) 100%
     );
     background-position: top center, top center;
     background-size: 2rem 2rem, 2rem 2rem;
@@ -65,51 +72,120 @@ header {
 
 nav {
     width: 100%;
-    height: 34px;
-    background-color: #303030;
+    height: 50px;
+    background-color: #121a18cb;
     display: flex;
     justify-content: center;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.514);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+    gap: 10px;
+    border-bottom: 1px solid #dca66449;
 }
 
 .nav-btn {
+    position: relative;
     align-self: flex-end;
     height: 50px;
-    width: 75px;
     background-color: transparent;
     border: 0px;
     cursor: pointer;
-    color: white;
+    color: rgb(221, 218, 203);
     text-transform: uppercase;
     font-size: 16px;
+    text-shadow: 0px 0px 8px #cc8c4200;
+    transition: all ease-in-out 0.2s;
+}
+
+.nav-btn:hover {
+    color: #ffe48a;
+    text-shadow: 0px 0px 8px #cc8c42;
+}
+
+.nav-btn::after {
+    content: "";
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    display: block;
+    width: 0px;
+    height: 1px;
+    background-color: #dca564;
+    transition: all ease-in-out 0.2s;
+}
+
+.nav-btn:hover::after {
+    width: 110%;
 }
 
 #content-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
 }
 
-#home-container {
+.info {
     margin-top: 5%;
     margin-bottom: 5%;
-    width: 500px;
-    height: 500px;
-    background-color: #303030;
+    width: 80%;
+    background-color: #121a18;
+    border-radius: 20px;
+    padding: 3%;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8);
+    border: 1px solid #dca564;
 }
-
-hr.dotted {
-    border-top: 3px dotted #bbb;
-  }
 
 footer {
     display: flex;
     width: 100%;
     height: 50px;
-    background-color: #303030;
+    background-color: #121a18;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.5);
+    border-top: 1px solid #dca66449;
+}
+
+.rounded-circle {
+    width: 11rem; 
+    height: 11rem; 
+    box-shadow: 0 0 8px rgba(0,0,0,.8); 
+	background: url(https://cdn.discordapp.com/attachments/871914093865472011/889046568517378088/nid.png) no-repeat center center; 
+	background-size: cover; 
+    background-color: transparent;
+    border-radius: 50%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.divider-wrapper {
+    width: 100%;
+    display: flex;
+    color:#9ee73d; 
+    font-style: italic;
+}
+
+span.dotted {
+    border-top: 1px dotted rgba(143, 145, 115, 0.541);
+}
+
+span.divider {
+    margin-left: 4px;
+    flex: 1;
+    height: 0.8rem;
+    border-bottom: 1px solid rgba(143, 145, 115, 0.541);
+}
+
+
+
+h2 {
+    font-family: Carattere,cursive;
+    color: #ffe48a;
+    font-size: 30px;
+    text-shadow: 0px 0px 4px #cc8b42, 0px 0px 8px black, 0px 0px 8px black;
+    margin: 12px;
+    margin-bottom: 0px;
+    text-align:center
 }
