--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,11 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     background: url(https://images.unsplash.com/photo-1501339847302-ac426a4a7cbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80) no-repeat center center;
     background-size: cover;
+    background-attachment: fixed;
     margin:0;
     color: rgb(221, 218, 203);
     font-family: 'Noto Sans', sans-serif
@@ -136,6 +141,12 @@ nav {
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8);
     border: 1px solid #dca564;
     padding: 30px 20px;
+    animation: fadein ease-in 0.3s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; transform: scale(0.98,0.98);}
+    to   { opacity: 1; transform: scale(1,1);}
 }
 
 footer {
