--- a/src/style.css
+++ b/src/style.css
@@ -29,11 +29,12 @@ body {
 h1 {
     font-family: Carattere,cursive;
     color: #ffe48a;
-    font-size: 80px;
+    font-size: 4.5rem;
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
     text-shadow: 0px 0px 4px #cc8b42, 0px 0px 8px black, 0px 0px 8px black;
+    white-space: nowrap;
 }
 
 header {
@@ -228,7 +229,7 @@ p {
 #menu-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 12px;
+    column-gap: 5%;
 }
 
 #contact-details {
@@ -254,4 +255,68 @@ ul {
 li {
     margin: 6px;
     
+}
+
+@media only screen and (max-device-width: 750px) {
+    
+    body {
+        font-size: 1rem;
+        width: 100vw;
+        min-height: 100vh;
+        background-attachment: scroll;
+    }
+
+    header {
+        height: 25vh;
+    }
+
+    nav {
+        width: 100vw;
+    }
+
+    #menu-grid {
+        grid-template-columns: 1fr;
+    }
+
+    #content {
+        width: 100vw;
+        min-width: 0px;
+    }
+
+    .rounded-circle {
+        width: 10rem; 
+        height: 10rem; 
+    }
+
+    .info {
+        margin-top: 0;
+        margin: 5rem;
+    }
+
+    h1 {
+        font-size: 4rem;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    span.divider {
+        height: 0.8rem;
+        border-bottom: 0.1rem solid rgba(143, 145, 115, 0.541);
+    }
+
+    footer {
+        width: 100vw;
+    }
+
+    ul {
+        width: 70%;
+    }
 }
