--- a/src/style.css
+++ b/src/style.css
@@ -258,12 +258,16 @@ li {
 }
 
 @media only screen and (max-device-width: 400px) {
+    html {
+        box-sizing: border-box;
+    }
     
     body {
         font-size: 1rem;
         width: 100vw;
         min-height: 100vh;
         background-attachment: scroll;
+        box-sizing: border-box;
     }
 
     header {
@@ -280,7 +284,8 @@ li {
 
     #content {
         width: 100vw;
-        min-width: 0px;
+        min-width: 0vw;
+        box-sizing: border-box;
     }
 
     .rounded-circle {
@@ -289,8 +294,7 @@ li {
     }
 
     .info {
-        margin-top: 0;
-        margin: 5rem;
+        margin: 0;
     }
 
     h1 {
