--- a/src/style.css
+++ b/src/style.css
@@ -259,6 +259,7 @@ li {
 
 @media only screen and (max-device-width: 600px) {
     html {
+        box-sizing: border-box;
     }
     
     body {
@@ -284,6 +285,7 @@ li {
     #content {
         width: 100vw;
         min-width: 0vw;
+        box-sizing: border-box;
     }
 
     .rounded-circle {
