--- a/src/style.css
+++ b/src/style.css
@@ -207,7 +207,7 @@ h2 {
     font-family: Carattere,cursive;
     color: #ffe48a;
     font-size: 30px;
-    text-shadow: 0px 0px 4px #cc8b42, 0px 0px 8px black, 0px 0px 8px black;
+    text-shadow: 0px 0px 4px #cc8b42;
     margin: 0px;
     text-align:center;
     text-transform: capitalize;
@@ -218,7 +218,7 @@ h3 {
     font-family: Carattere,cursive;
     color: #ffe48a;
     font-size: 24px;
-    text-shadow: 0px 0px 4px #cc8b42, 0px 0px 8px black, 0px 0px 8px black;
+    text-shadow: 0px 0px 4px #cc8b42;
     margin: 0;
     margin-top: 16px;
 }
@@ -286,7 +286,7 @@ li {
     #content {
         width: 100vw;
         min-width: 0vw;
-        box-sizing: border-box;
+        border: 0;
     }
 
     .rounded-circle {
