--- a/src/style.css
+++ b/src/style.css
@@ -258,7 +258,7 @@ li {
     
 }
 
-@media only screen and (max-device-width: 600px) {
+@media only screen and (max-width: 600px) {
     html {
         box-sizing: border-box;
     }
